samples/_failures_safe/1761539816_74128a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_872d24d3.c: In function ‘main’:
./samples/SAFE/__tmp_872d24d3.c:146:9: error: expected expression at end of input
  146 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_872d24d3.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_872d24d3.c:146:9: error: expected declaration or statement at end of input
